# warehouse_search

./: docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/v1/: search.py
backend/app/data/: warehouse.xlsx
backend/app/services/: product_service.py  text_normalizer.py
