[project]
name = "backend"
version = "0.1.0"
description = "Search for goods in stock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "openpyxl>=3.1.5",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "uvicorn>=0.40.0",
]
# isort
[tool.isort]
profile = "black"
py_version = "312"
line_length = "120"
use_parentheses = true
include_trailing_comma = true
combine_as_imports = false
force_sort_within_sections = true
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Library"
known_first_party = ["core"]
known_third_party = ["polars", "uvicorn", "pyarrow", "fastapi", "openpyxl"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
# black
[tool.black]
include = '^(?!.*main\.py).*\.py$'
line-length = 120
target-version = ['py312']
exclude = '''/.git|/.ruff_cache|/.venv|/__pycache__|output.*|base.*|_asset.*'''
